<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2013 SOU Rover Capstone</string>
    <string name="menu_settings">Settings</string>
    <string name="button_test_bluetooth">Debug Bluetooth</string>
    <string name="button_forward">Forward</string>
    <string name="button_reverse">Reverse</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="setting_title_bluetooth">Bluetooth Connection</string>
    <string name="setting_title_rover_telemetry">Rover Telemetry</string>
    <string name="setting_title_control_mode">Control Mode</string>
    <string name="title_activity_screen__bluetooth">Bluetooth Connection</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_screen_telemetry">ROGO Telemetry &amp; Console</string>
    <string name="title_activity_screen_mode_select">ROGO Mode Select</string>
    <string name="text_welcome">Welcome to Rogo!\nPlease select an action from the options menu.</string>
    <string name="button_enable_Bluetooth">Enable Bluetooth</string>
    <string name="button_disable_bluetooth">Disable Bluetooth</string>
    <string name="button_connect_bluetooth">Connect Bluetooth</string>
    <string name="button_list_devices">List Devices</string>
    <string name="exit">Exit</string>
    <string name="title_activity_control_simple">Control Mode - Simple</string>
    <string name="title_activity_wi_fi_server">Wi-Fi Server</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_control_complex">ControlComplexActivity</string>
    <string name="title_activity_web">Web Activity</string>

</resources>