<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/bluetooth_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/setting_title_bluetooth"/>
    
    <item
        android:id="@+id/control_mode_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/setting_title_control_mode"/>
     
    <item
        android:id="@+id/telemetry_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/setting_title_rover_telemetry"/>
    
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>